# rust-mcp-sdk

./: .gitignore  .release-config.json  .release-manifest.json  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  development.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint-pr.yml  release-pr.yml
crates/rust-mcp-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/rust-mcp-macros/src/: lib.rs  utils.rs
crates/rust-mcp-macros/tests/: macro_test.rs
crates/rust-mcp-macros/tests/common/: common.rs
crates/rust-mcp-sdk/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/rust-mcp-sdk/src/: error.rs  lib.rs  mcp_handlers.rs  mcp_macros.rs  mcp_runtimes.rs  mcp_traits.rs  utils.rs
crates/rust-mcp-sdk/src/mcp_handlers/: mcp_client_handler.rs  mcp_client_handler_core.rs  mcp_server_handler.rs  mcp_server_handler_core.rs
crates/rust-mcp-sdk/src/mcp_macros/: tool_box.rs
crates/rust-mcp-sdk/src/mcp_runtimes/: client_runtime.rs  server_runtime.rs
crates/rust-mcp-sdk/src/mcp_runtimes/client_runtime/: mcp_client_runtime.rs  mcp_client_runtime_core.rs
crates/rust-mcp-sdk/src/mcp_runtimes/server_runtime/: mcp_server_runtime.rs  mcp_server_runtime_core.rs
crates/rust-mcp-sdk/src/mcp_traits/: mcp_client.rs  mcp_handler.rs  mcp_server.rs
crates/rust-mcp-transport/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/rust-mcp-transport/src/: error.rs  lib.rs  mcp_stream.rs  message_dispatcher.rs  stdio.rs  transport.rs  utils.rs
doc/: getting-started-mcp-server.md
examples/hello-world-mcp-server/: Cargo.toml  README.md
examples/hello-world-mcp-server-core/: Cargo.toml  README.md
examples/hello-world-mcp-server-core/src/: handler.rs  main.rs  tools.rs
examples/hello-world-mcp-server/src/: handler.rs  main.rs
examples/simple-mcp-client/: Cargo.toml  README.md
examples/simple-mcp-client-core/: Cargo.toml  README.md
examples/simple-mcp-client-core/src/: handler.rs  inquiry_utils.rs  main.rs
examples/simple-mcp-client/src/: inquiry_utils.rs  main.rs
