[package]
name = "rust-mcp-macros"
version = "0.1.2"
authors = ["Ali Hashemi"]
categories = ["data-structures", "parser-implementations", "parsing"]
description = "A procedural macro that derives the MCPToolSchema implementation for structs or enums, generating a tool_input_schema function used with rust_mcp_schema::Tool."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-macros"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "macros"]
license = "MIT"
edition = "2024"

[package.metadata.docs]
description = "A procedural macro, part of the rust-mcp-sdk ecosystem, that derives the MCPToolSchema implementation for structs or enums, generating a tool_input_schema function used with rust_mcp_schema::Tool."

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
syn = "2"

[dev-dependencies]
rust-mcp-schema = "0.2"

[lints]
workspace = true

[lib]
proc-macro = true
