[package]
name = "rust-mcp-sdk"
version = "0.1.3"
authors = ["Ali Hashemi"]
categories = ["data-structures", "parser-implementations", "parsing"]
description = "An asynchronous SDK and framework for building MCP-Servers and MCP-Clients, leveraging the rust-mcp-schema for type safe MCP Schema Objects."
repository = "https://github.com/rust-mcp-stack/rust-mcp-sdk"
documentation = "https://docs.rs/rust-mcp-sdk"
keywords = ["rust-mcp-stack", "model", "context", "protocol", "sdk"]
license = "MIT"
edition = "2021"

[dependencies]
rust-mcp-schema = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-macros = { workspace = true, optional = true }

tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["macros"]         # Default features
macros = ["rust-mcp-macros"]

[lints]
workspace = true
