[package]
name = "simple-mcp-client"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"


[dependencies]

rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
rust-mcp-schema = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"

[lints]
workspace = true
